# citron_gelbooru_scraper

./: LICENSE  QUICKSTART.md  README.md  citron_gelbooru_scraper_example.ipynb  example_usage.py  pyproject.toml  requirements.txt
citron_gelbooru_scraper/: __init__.py  auth.py  core.py  downloader.py  tags.py  utils.py
tests/: integration_test.py  integration_test_character_and_count.py  integration_test_image_and_tag_downloader.py  test_core.py  test_downloader.py  test_tags.py
